Next (not yet released)

* Added rule to check property name against list of known properties (fixes #136)
* Ensure consistency across error messages (fixes #89)
* Updated parser to handle CSS escaping (fixes #97)
* Added a rule to check for high text-indent for RTL (fixes #109)
* Add rule to warn for universal selector (fixes #38)
* Changed too many !important error to warning (fixes #105)
* Updated parser to allow parsing of CSS3 keyframes
* Fixed error where Rhino CLI could not read directories (fixes #106)
* Added user-select to vendor prefix rule (fixes #98)
* Changed wording of !important error to include max usage recommendation (fixes #104)

July 5, 2011 - v0.4.0

* Updated parser (fixes #49)
* Added rule for compatible vendor prefixes (pull #78)
* Added rule for duplicate properties (fixes #51)
* Updated error message for display:inline used with float (fixes #16)
* Vendor prefix rule only checks for known rules (fixes #93, #54, #27)
* Make sure @font-face doesn't break vendor-prefix rule (fixes #90)
* Make sure that url() with spaces before the URI works (fixes #94)

June 25, 2011 - v0.3.2

* Fixed regression in output format for CLI (fixes #87)

June 25, 2011 - v0.3.1

* Fixed EOL issue for Node.js CLI

June 25, 2011 - v0.3.0

* Rhino and Node CLIs both exit with code 1 when there are errors (pull #72)
* Changed description of adjoining classes to be unsupported in IE6 (fixes #11)
* Made license comment important in build files (fixes #46)
* Code cleanup (pull #70)
* Cleanup of whitespace (pull #74)
* Standardization of CLI interface (pull #81)
* Switched display-property-grouping to allow padding, margin-left, and margin-right for display: inline (fixes #3)
* Changed messaging for float rule (fixes #26)
* border:none with width/height is okay (fixes #45)
* Updated web worker to accept JSON-encoded input
* Allow turning on/off rules in web interface and CLIs (fixes #77)
* Introduced release directory that will hold official release version